# documentation

./: .gitignore  README.md  SUMMARY.md  q-and-a.md
cv/: README.md
cv/label-img/: README.md  frame_extractor_colab.ipynb  frame_extractor_local.ipynb
cv/training/: README.md
docker/: README.md  local-testing.md
intro-project/: README.md  part-3-cv.md
intro-project/archive/2019/: part-2-basic-movement.md  part-4-integration-1.md  part-5-integration-2.md
intro_project_2021/: Part 1 - Electrical Assembly.md
introduction-project/: introduction-project.md  part-1-mechanical-assembly.md  part-2-basic-movement.md  part-2-electrical-assembly.md  q-and-a.md
ros-tutorials/: README.md  brew-ros-configuration.sh  docker-compose.yml  lesson-0-introduction.md  lesson-1-basics.md  lesson-2-nodes-and-topics.md  lesson-3-write-a-node.md  lesson-4-smach.md  winget-ros-configuration.ps1
ros-tutorials/catkin_ws/: build.sh
ros-tutorials/catkin_ws/src/tutorial/: CMakeLists.txt  package.xml
ros-tutorials/catkin_ws/src/tutorial/scripts/: move_square.py
tf2/: README.md
unsorted/: Jetson_Flashing_Instructions.md  README.md  mobaxterm  network_setup.md
