cmake_minimum_required(VERSION 2.8.3)
project(tutorial)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED)

## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
catkin_package()

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories()
