<?xml version="1.0"?>
<package format="2">
  <name>tutorial</name>
  <version>0.0.0</version>
  <description>
    The tutorial package.
  </description>

  <maintainer email="hello@duke-robotics.com">Duke Robotics Club</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
